# android-rust-example-apk

./: Cargo.toml  README.md
jni/: Cargo.toml
jni/android/app/: build.gradle
jni/android/app/src/main/: AndroidManifest.xml
jni/android/app/src/main/java/com/metrof/: MainActivity.java
jni/src/: jni_looper.rs  lib.rs  main.rs  notification.rs
wgpu/: Cargo.toml
wgpu/android/: .gitignore
wgpu/android/app/: build.gradle
wgpu/android/app/src/main/: AndroidManifest.xml
wgpu/src/: lib.rs  main.rs
